--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Server=T2LPRVT4109; Database=dotnet-rpg; Trusted_Connection=true; MultipleActiveResultSets=true"
+    "DefaultConnection":"Server=.; Database=dotnet-rpg; Trusted_Connection=true; MultipleActiveResultSets=true"
   },
   "AppSettings" : {
     "Token": "my top secret key"
